// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getStory > onlyPublic > should return the story if it is public 1`] = `
{
  "author": {
    "id": "should return the story if it is public-authorId",
    "name": null,
  },
  "id": "should return the story if it is public-storyId",
  "published": true,
  "publishedAt": 1724853281065,
  "questionExamples": [
    {
      "answer": "True",
      "customMessage": "いい質問ですね！山田さんは人を殺しています。",
      "question": "山田さんは人を殺害しましたか？",
    },
    {
      "answer": "Unknown",
      "question": "山田さんは心が女性ですか？",
    },
    {
      "answer": "False",
      "question": "山田さんは子供であり、保護者と一緒にいますか？",
    },
    {
      "answer": "True",
      "question": "山田さんは隠れるために女性用トイレに入りましたか？",
    },
    {
      "answer": "True",
      "question": "トイレは公園にありますか？",
    },
    {
      "answer": "False",
      "question": "トイレは山田さんの家にありますか？",
    },
    {
      "answer": "Unknown",
      "customMessage": "人目には付きづらかったと思います。",
      "question": "トイレは人目につく場所にありますか？",
    },
    {
      "answer": "False",
      "question": "女子トイレには山田さん以外に誰かいますか？",
    },
  ],
  "quiz": "山田さんは男性なのに女性用トイレにいる。それはなぜか？ （ヒントはありますか？と質問するとヒントが出ます。）
",
  "simpleTruth": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "title": "女性用トイレの男性",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`getStory > publicOrWithAuthor > should return the story if it is authored by the author 1`] = `
{
  "author": {
    "id": "should return the story if it is authored by the author-authorId",
    "name": null,
  },
  "id": "should return the story if it is authored by the author-storyId",
  "published": false,
  "publishedAt": 1724853281065,
  "questionExamples": [
    {
      "answer": "True",
      "customMessage": "いい質問ですね！山田さんは人を殺しています。",
      "question": "山田さんは人を殺害しましたか？",
    },
    {
      "answer": "Unknown",
      "question": "山田さんは心が女性ですか？",
    },
    {
      "answer": "False",
      "question": "山田さんは子供であり、保護者と一緒にいますか？",
    },
    {
      "answer": "True",
      "question": "山田さんは隠れるために女性用トイレに入りましたか？",
    },
    {
      "answer": "True",
      "question": "トイレは公園にありますか？",
    },
    {
      "answer": "False",
      "question": "トイレは山田さんの家にありますか？",
    },
    {
      "answer": "Unknown",
      "customMessage": "人目には付きづらかったと思います。",
      "question": "トイレは人目につく場所にありますか？",
    },
    {
      "answer": "False",
      "question": "女子トイレには山田さん以外に誰かいますか？",
    },
  ],
  "quiz": "山田さんは男性なのに女性用トイレにいる。それはなぜか？ （ヒントはありますか？と質問するとヒントが出ます。）
",
  "simpleTruth": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "title": "女性用トイレの男性",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`getStory > publicOrWithAuthor > should return the story if it is public 1`] = `
{
  "author": {
    "id": "should return the story if it is public-authorId",
    "name": null,
  },
  "id": "should return the story if it is public-storyId",
  "published": true,
  "publishedAt": 1724853281065,
  "questionExamples": [
    {
      "answer": "True",
      "customMessage": "いい質問ですね！山田さんは人を殺しています。",
      "question": "山田さんは人を殺害しましたか？",
    },
    {
      "answer": "Unknown",
      "question": "山田さんは心が女性ですか？",
    },
    {
      "answer": "False",
      "question": "山田さんは子供であり、保護者と一緒にいますか？",
    },
    {
      "answer": "True",
      "question": "山田さんは隠れるために女性用トイレに入りましたか？",
    },
    {
      "answer": "True",
      "question": "トイレは公園にありますか？",
    },
    {
      "answer": "False",
      "question": "トイレは山田さんの家にありますか？",
    },
    {
      "answer": "Unknown",
      "customMessage": "人目には付きづらかったと思います。",
      "question": "トイレは人目につく場所にありますか？",
    },
    {
      "answer": "False",
      "question": "女子トイレには山田さん以外に誰かいますか？",
    },
  ],
  "quiz": "山田さんは男性なのに女性用トイレにいる。それはなぜか？ （ヒントはありますか？と質問するとヒントが出ます。）
",
  "simpleTruth": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "title": "女性用トイレの男性",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`getStory > withAuthorId > should return the story if it is authored by the author 1`] = `
{
  "author": {
    "id": "should return the story if it is authored by the author-authorId",
    "name": null,
  },
  "id": "should return the story if it is authored by the author-storyId",
  "published": false,
  "publishedAt": 1724853281065,
  "questionExamples": [
    {
      "answer": "True",
      "customMessage": "いい質問ですね！山田さんは人を殺しています。",
      "question": "山田さんは人を殺害しましたか？",
    },
    {
      "answer": "Unknown",
      "question": "山田さんは心が女性ですか？",
    },
    {
      "answer": "False",
      "question": "山田さんは子供であり、保護者と一緒にいますか？",
    },
    {
      "answer": "True",
      "question": "山田さんは隠れるために女性用トイレに入りましたか？",
    },
    {
      "answer": "True",
      "question": "トイレは公園にありますか？",
    },
    {
      "answer": "False",
      "question": "トイレは山田さんの家にありますか？",
    },
    {
      "answer": "Unknown",
      "customMessage": "人目には付きづらかったと思います。",
      "question": "トイレは人目につく場所にありますか？",
    },
    {
      "answer": "False",
      "question": "女子トイレには山田さん以外に誰かいますか？",
    },
  ],
  "quiz": "山田さんは男性なのに女性用トイレにいる。それはなぜか？ （ヒントはありますか？と質問するとヒントが出ます。）
",
  "simpleTruth": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "title": "女性用トイレの男性",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;
